style changes (phase 1 revisions)

--- a/confidentiality-lab/confidentiality-lab-explanation.html
+++ b/confidentiality-lab/confidentiality-lab-explanation.html
@@ -16,42 +16,33 @@
             <img src="https://www.bradley.edu/dotAsset/1cc22ef2-a30c-4f83-a4ea-d36172d54d73.svg" alt="Bradley Logo" class="responsive" />
         </div>
         <a href="../cia-labs-home.html">CIA Lab Home</a>
-        <a href="../confidentiality-lab/confidentiality-lab-visualizer.html">Visualizer</a>
-        <a href="../confidentiality-lab/confidentiality-lab-explanation.html">Explanation</a>
+        <a href="../confidentiality-lab/confidentiality-lab-visualizer.html">Confidentiality</a>
+        <a href="../confidentiality-lab/confidentiality-lab-explanation.html">Background</a>
         <a href="../confidentiality-lab/confidentiality-lab-shift.html">Caesar Shift</a>
     </div>
 
-    <div class="page" style="padding-left: 20px;">
-        <h1>CIA Lab 1: Confidentiality - Why It's Important</h1>
-        <!--
-        <p class="header-description">
-            What if you sat across the classroom from your friend, and you wanted to pass them a note? Would you trust the person at each desk between you and your friend not to read it?
-        </p>
-
-        <p class="header-description">
-            You have to make sure the message you're passing can't be read; in other words you want to preserve the <b>Confidentiality</b> of that message.
-        </p>
-
-        <p class="header-description">
-            The same is true when talking about communications over the internet. Check out the example below!
-        </p>
-        --->
+    <div class="page" style="text-align: center;">
+        <h1>Confidentiality - Background Information</h1>
+        <div id="next" class="header-description" style="text-align: left; padding: 50px; font-size: 20px;">
+            <p>
+                The internet is an open channel for communication, so anyone who is listening for a message can hear it. This means that in order to ensure 
+                the privacy of the messages, extra precautions must be taken.
+            </p>
+        </div>
 
         <!--<button id="visibility" onclick="toggleVisibility('example', 'visibility', false);">Show Example</button> -->
         <script type="text/javascript" src="../scripts/button-helper.js"> </script>
         <div id="example" class="header-description">
             <p>
-                <img src="sending-message-2.gif" alt=""  width="800" height="400">
+                <img src="sending-message-2.gif" alt=""  width="800" height="400" style="margin-left: auto; margin-right: auto; display: block;">
             </p>
-            <button id="visibility2" onclick="toggleVisibility('next', 'visibility2', false);">More Info</button>
         </div>
-        <div id="next" class="header-description" style="visibility:hidden">
+        <div id="next" class="header-description" style="text-align: left; padding: 50px; font-size: 20px;">
             <p>
                 If we don't encrypt our data and make it unreadable to strangers, it might be seen by the wrong people, or even tampered with by hackers.
                 One way we can encrypt a message in order to ensure its confidentiality is by utilizing the <b>Caesar Cipher</b>. 
             </p>
         </div>
-        <button ><a href="../confidentiality-lab/confidentiality-lab-shift.html">Next Page</a></button>
     </div>
 
     <div class="footer">
