--- a/confidentiality-lab/confidentiality-lab-shift.html
+++ b/confidentiality-lab/confidentiality-lab-shift.html
@@ -16,14 +16,14 @@
           <img src="https://www.bradley.edu/dotAsset/1cc22ef2-a30c-4f83-a4ea-d36172d54d73.svg" alt="Bradley Logo" class="responsive" />
         </div>
         <a href="../cia-labs-home.html">CIA Lab Home</a>
-        <a href="../confidentiality-lab/confidentiality-lab-visualizer.html">Visualizer</a>
-        <a href="../confidentiality-lab/confidentiality-lab-explanation.html">Explanation</a>
+        <a href="../confidentiality-lab/confidentiality-lab-visualizer.html">Confidentiality</a>
+        <a href="../confidentiality-lab/confidentiality-lab-explanation.html">Background</a>
         <a href="../confidentiality-lab/confidentiality-lab-shift.html">Caesar Shift</a>
     </div>
 
     <div class="page" style="text-align: center; font-size: 20px; padding-left: 20px;">
         <h1>CIA Lab 1: Confidentiality - Caesarian Shift Basics</h1>
-        <p class="header-description">
+        <p class="header-description" style="text-align: left; padding: 50px;">
             The Caesarian Cipher is an encryption method where you shift each character based on the given key value (Integer i.e. all Nautrual Numbers, 0, and Negative numbers).
             Let's walk through a long-form example of this shifting method then when we go to encrypt, we can scale down the explanation for this step.
         </p>
@@ -90,7 +90,7 @@
                 <!-- Cipher Table END -->
                 <p style="text-align: center;"></p>
                 <!-- Message Table Start -->
-                <table style = "font-size: 25; text-align: center;" name="message" id="messageTable">
+                <table style = "font-size: 25; text-align: center;" name="message" id="messageTable" align="center">
                 </table>
                 <!-- Message Table END-->
             </p>
