style normalization phase 2

--- a/integrity-lab/integrity-lab-visualizer.html
+++ b/integrity-lab/integrity-lab-visualizer.html
@@ -22,7 +22,7 @@
       
     
         <div class="header">
-          <h1>CIA Lab 2: Integrity - Try it out</h1>
+          <!-- <h1>CIA Lab 2: Integrity - Try it out</h1> -->
           <!---
           <p class="description">
             Sometimes encryption and decryption are easier to understand through
@@ -33,7 +33,7 @@
 
 
           <span>
-            <p id="info" class="box" style="font-size: 120%;" readonly>
+            <p id="info" class="box" style="font-size: 20px" readonly>
               Type in a message below and click next to learn how to hash a message.
             </p>
           </span>  
