--- a/cia-labs-home.html
+++ b/cia-labs-home.html
@@ -27,7 +27,7 @@
         <div class="headerBU" style="text-align: center; height: 80px;">
             <img src="https://www.bradley.edu/dotAsset/1cc22ef2-a30c-4f83-a4ea-d36172d54d73.svg" alt="Bradley Logo" class="responsive" />
         </div>
-        <a class="selected" href="cia-labs-home.html">CIA Labs</a>
+        <a class="selected" href="cia-labs-home.html">Home</a>
     </div>
 
     <div class="page">
