--- a/confidentiality-lab/confidentiality-lab-visualizer.html
+++ b/confidentiality-lab/confidentiality-lab-visualizer.html
@@ -99,8 +99,8 @@
                 <marquee 
                     direction = "right" 
                     id = "moveText"
-                    loop = 2
-                    style="width: 100%; font-size: 20px;"
+                    loop = 1
+                    style="width: 100%; font-size: 20px;color:blue;"
                     
                     >
                 </marquee> 
