--- a/cia-labs-home.html
+++ b/cia-labs-home.html
@@ -19,6 +19,7 @@
               height: 95%;
               margin: 0;
               padding: 0;
+              padding-bottom: 20px;
             }
           </style>
     </head>
