--- a/integrity-lab/integrity-lab-visualizer.html
+++ b/integrity-lab/integrity-lab-visualizer.html
@@ -247,7 +247,7 @@
               document.getElementById("next4").style = "display:none";  
               Bhash.value = temp;
               Bmessage.value = 8675309;
-              concat = Ssercet.value + Bmessage.value;
+              concat.value = Ssercet.value + Bmessage.value;
               Explain.value = "FILL IN";
               document.getElementById("next5").style = "display:all";
             }
