--- a/confidentiality-lab/confidentiality-lab-visualizer.html
+++ b/confidentiality-lab/confidentiality-lab-visualizer.html
@@ -109,6 +109,7 @@
             
             <br>
                 <canvas width="400" height="500" class="codehs-editor-canvas"></canvas>
+                <img src="" id="JStemp" style="display: none;"></img>
                 <script type="text/javascript" src="../scripts/canvasHandler.js"></script>
               <input style="font-size: 20; width: 50%;" id="hEncrypt" type="text" style="width:280px; border: 2px solid rgb(48, 71, 66)" readonly />
 
