--- a/confidentiality-lab/confidentiality-lab-explanation.html
+++ b/confidentiality-lab/confidentiality-lab-explanation.html
@@ -19,7 +19,6 @@
         <a href="../confidentiality-lab/confidentiality-lab-visualizer.html">Confidentiality</a>
         <a href="../confidentiality-lab/confidentiality-lab-explanation.html">Background</a>
         <a href="../confidentiality-lab/confidentiality-lab-shift.html">Caesar Shift</a>
-        <a href="https://en.wikipedia.org/wiki/Information_security">More Info</a>
     </div>
 
     <div class="page" style="text-align: center;">
@@ -41,7 +40,7 @@
         <div id="next" class="header-description" style="text-align: left; padding: 50px; font-size: 20px;">
             <p>
                 If we don't encrypt our data and make it unreadable to strangers, it might be seen by the wrong people, or even tampered with by hackers.
-                One way we can encrypt a message in order to ensure its confidentiality is by utilizing the <b>Caesar Cipher</b>. 
+                One way we can encrypt a message in order to ensure its confidentiality is by utilizing the <b>Caesar Cipher</b>. To learn more about this cipher, click <a href="https://en.wikipedia.org/wiki/Caesar_cipher#"> here.</a>
             </p>
         </div>
     </div>
