Fixed Alignment Bug
Had to re-declare the center alignment along with the border color change or else it won't work when done separately.

--- a/integrity-lab/integrity-lab-visualizer.html
+++ b/integrity-lab/integrity-lab-visualizer.html
@@ -312,7 +312,7 @@
             {
               Result.value = concat + " != " + Bhash.value;
               Explain.value = "The hashed value of the concatonated message is " + concat + " which is not equal to the hash of the message received, thus this message is a fake.";
-              document.getElementById("Result").style = "border-color:red;";
+              document.getElementById("Result").style = "border-color: red; text-align:center;";
             }
           }
           
