--- a/confidentiality-lab/confidentiality-lab-shift.html
+++ b/confidentiality-lab/confidentiality-lab-shift.html
@@ -108,7 +108,7 @@
                     <br>
                     <br>
                     <button type="submit" value="Run Example Shift"> Run Example Shift </button>
-                    <button type="reset" value="Reset"> Reset </button>
+                    <button id="reset" type="reset" value="Reset"> Reset </button>
                       
                 </form>
                     <!-- Each of these 3 functions apply to reading user input for the Caesar Cipher demonstration-->
@@ -148,5 +148,6 @@
     <div class="footer">
         Property of Bradley University. All Rights Reserved. 2023
     </div>
+    <script src="/scripts/reset.js"></script>
 </body>
 
