--- a/integrity-lab/integrity-lab-visualizer.html
+++ b/integrity-lab/integrity-lab-visualizer.html
@@ -257,7 +257,7 @@
               Bhash.value = temp;
               Bmessage.value = 8675309;
               concat = Ssercet.value + Bmessage.value;
-              Explain.value = "The recieved message is separated from the hash value.";
+              Explain.value = "The received message is separated from the hash value.";
               document.getElementById("next5").style = "display:all";
             }
             else
@@ -265,7 +265,7 @@
               document.getElementById("next4").style = "display:none";  
               Bhash.value = temp;
               Bmessage.value = Umessage.value;
-              Explain.value = "The recieved message and hash are separated from each other.";
+              Explain.value = "The received message and hash are separated from each other.";
               document.getElementById("next5").style = "display:all";
             }            
           }
