--- a/confidentiality-lab/confidentiality-lab-shift.html
+++ b/confidentiality-lab/confidentiality-lab-shift.html
@@ -24,7 +24,7 @@
     <div class="page" style="text-align: center; font-size: 20px; padding-left: 20px;">
         <h1>CIA Lab 1: Confidentiality - Caesarian Shift Basics</h1>
         <p class="header-description" style="text-align: left; padding: 50px;">
-            The Caesarian Cipher is an encryption method where you shift each character based on the given key value (Integer i.e. all Nautrual Numbers, 0, and Negative numbers).
+            The Caesarian Cipher is an encryption method where you shift each character based on the given key value (Integer i.e. all Natural Numbers, 0, and Negative numbers).
             Let's walk through a long-form example of this shifting method then when we go to encrypt, we can scale down the explanation for this step.
         </p>
         <!--<button id="visibility" onclick="toggleVisibility('example', 'visibility', false);">Show Example</button> -->
