In-Meeting Changes
Phase 2 Changes:
	CSS Changes:
		NavBar font size specified at 20px
	Integrity Page:
		Input field for the hash field and message field order swapped.
		Added Text coloring to a couple input fields to show relation
	Home Page:
		Authenticity to Availability

--- a/cia-labs-home.html
+++ b/cia-labs-home.html
@@ -47,7 +47,7 @@
                         {
                             x: "A",
                             value: 100,
-                            name: "Authenticity",
+                            name: "Availability",
                             normal: {fill: "#00FF00 0.5"},
                             label: {fontColor: "#000000", fontSize: "25"}
                         },
@@ -110,17 +110,17 @@
                     window.location="/integrity-lab/integrity-lab-visualizer.html";
                 }
                 else if(elmt == "ac_path_18"){ // left and top circles overlap
-                    alert("Confidentiality and Authenticity page coming soon!")
+                    alert("Confidentiality and Availability page coming soon!")
                 }
                 else if(elmt == "ac_path_16"){ // top circle
                     //alert("Confidentiality page coming soon!")
                     window.location="/confidentiality-lab/confidentiality-lab-visualizer.html";
                 }
                 else if(elmt == "ac_path_1c"){ // right and top circles overlap
-                    alert("Integrity and Authenticity page coming soon!")
+                    alert("Integrity and Availability page coming soon!")
                 }
                 else if(elmt == "ac_path_14"){ // right circle
-                    alert("Authenticity page coming soon!")
+                    alert("Availability page coming soon!")
                 }
                 else if(elmt == "ac_path_1a"){ // left and right circles overlap
                     alert("Confidentiality and Integrity page coming soon!")
