Created availability lab

--- a/cia-labs-home.html
+++ b/cia-labs-home.html
@@ -120,7 +120,8 @@
                     alert("Integrity and Availability page coming soon!")
                 }
                 else if(elmt == "ac_path_14"){ // right circle
-                    alert("Availability page coming soon!")
+                    //alert("Availability page coming soon!")
+                    window.location="/availability-lab/availability-lab-visualizer.html";
                 }
                 else if(elmt == "ac_path_1a"){ // left and right circles overlap
                     alert("Confidentiality and Integrity page coming soon!")
