Added Heartbleed as Downloadable File
Only from a Google Drive
Tried to add the file itself, but Github has a 100MB upload limit

--- a/cia-labs-home.html
+++ b/cia-labs-home.html
@@ -29,6 +29,7 @@
             <img src="https://www.bradley.edu/dotAsset/1cc22ef2-a30c-4f83-a4ea-d36172d54d73.svg" alt="Bradley Logo" class="responsive" />
         </div>
         <a class="selected" href="cia-labs-home.html">Home</a>
+        <a href="https://drive.google.com/uc?id=1_0bmQQ0vtmzmg_HSdfry_MHK0Poa3Nj5&export=download&confirm=t">Download Heartbleed Lab</a>
     </div>
 
     <div class="page">
