Very Rough Lab Template
Defiantly needs changes, but the template is there. Also removed unused error alerts from the home page for the Venn diagram.

--- a/cia-labs-home.html
+++ b/cia-labs-home.html
@@ -111,24 +111,24 @@
                     window.location="/integrity-lab/integrity-lab-visualizer.html";
                 }
                 else if(elmt == "ac_path_18"){ // left and top circles overlap
-                    alert("Confidentiality and Availability page coming soon!")
+                    //alert("Confidentiality and Availability page coming soon!")
                 }
                 else if(elmt == "ac_path_16"){ // top circle
                     //alert("Confidentiality page coming soon!")
                     window.location="/confidentiality-lab/confidentiality-lab-visualizer.html";
                 }
                 else if(elmt == "ac_path_1c"){ // right and top circles overlap
-                    alert("Integrity and Availability page coming soon!")
+                    //alert("Integrity and Availability page coming soon!")
                 }
                 else if(elmt == "ac_path_14"){ // right circle
                     //alert("Availability page coming soon!")
                     window.location="/availability-lab/availability-lab-visualizer.html";
                 }
                 else if(elmt == "ac_path_1a"){ // left and right circles overlap
-                    alert("Confidentiality and Integrity page coming soon!")
+                    //alert("Confidentiality and Integrity page coming soon!")
                 }
                 else if(elmt == "ac_path_1e"){ // center overlap
-                    alert("Full Triad page coming soon!")
+                    //alert("Full Triad page coming soon!")
                 }
 
             });</script>
