--- a/seedlab.html
+++ b/seedlab.html
@@ -102,5 +102,8 @@
 			<button class="white">Download Heartbleed Lab</button> -->
 		</div>
 	</div>
+	<div class="footer">
+		Property of Bradley University. All Rights Reserved. 2023
+	  </div>
 </body>
 </html>
