Heartbleed lab page update
-added a gitignore (its kinda excessive but it ignores what i need it to)
-added os detection for download links

--- a/heartbleed-lab/introduction-page.html
+++ b/heartbleed-lab/introduction-page.html
@@ -74,11 +74,11 @@
     <script>
     var skip = async function()
           {
-            window.location="cia-labs-home.html";
+            window.location="../cia-labs-home.html";
           }
     var download = async function()
           {
-            window.location="https://drive.google.com/uc?id=1_0bmQQ0vtmzmg_HSdfry_MHK0Poa3Nj5&export=download&confirm=t";
+            window.location="main-page.html";
           }
     </script>
 	<div class="container">
@@ -96,8 +96,9 @@
 			</div>
 		</div>
 		<div class="button-container">
-            <button class="blue" onclick="skip()">Skip to Site</button>
-            <button class="white" onclick="download()">Download Heartbleed Lab</button>
+            <button class="blue" onclick="skip()">Back to Site</button>
+			<button class="white" onclick="download()">Continue to Heartbleed Lab</button>
+            
 			<!--<button class="blue">Skip to Site</button>
 			<button class="white">Download Heartbleed Lab</button> -->
 		</div>
